--- a/manifest.json
+++ b/manifest.json
@@ -2,15 +2,11 @@
   "name": "Budget Manager",
   "version": "1.0",
   "description": "Build an Extension!",
-  "icons": {
-    "128": "/img/icon128.png",
-    "48": "/img/icon48.png",
-    "16": "/img/icon16.png"
-  },
   "manifest_version": 2,
   "browser_action": {
-    "default_icon": "/img/icon16.png",
+    "default_icon": "/img/icon.png",
     "default_popup": "popup.html"
   },
-  "options_page": "options.html"
+  "options_page": "options.html",
+  "permissions": ["storage"]
 }
